Revert "fix: preference chips overflow issue by enabling flex-wrap"
This reverts commit 17a9ae07d1e48a695305b273e5f12be17bf26644.

--- a/src/styles/MyPage.module.css
+++ b/src/styles/MyPage.module.css
@@ -162,7 +162,6 @@
 }
 
 .preferenceCol {
-  display: flex;
   flex-direction: column;
   transition: none;
   height: fit-content;
@@ -195,7 +194,6 @@
 .preferenceChips {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
   gap: 8px;
   list-style: none;
